--- a/index.html
+++ b/index.html
@@ -1,1 +1,243 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Kujang Bogor Volleyball Club</title>
+<script src="https://cdn.tailwindcss.com"></script>
 
+<style>
+html { scroll-behavior: smooth; }
+body { font-family: 'Poppins', sans-serif; }
+</style>
+</head>
+<body class="bg-gray-50 text-gray-800">
+
+<!-- HERO -->
+<section class="bg-gradient-to-r from-green-600 via-blue-500 to-orange-500 text-white py-24 text-center">
+    <div class="flex justify-center mb-6">
+        <img src="logo.png" alt="Logo Kujang Bogor Volleyball Club" class="w-40 md:w-56 drop-shadow-2xl">
+    </div>
+    <h1 class="text-4xl md:text-6xl font-extrabold mb-6">Kujang Bogor Volleyball Club</h1>
+    <p class="text-lg md:text-xl mb-8">Akademi Bola Voli Usia 7–17 Tahun | Kota Bogor</p>
+    <a href="#daftar" class="bg-white text-green-600 px-8 py-3 rounded-full font-semibold shadow-lg hover:scale-105 transition">Daftar Sekarang</a>
+</section>
+
+
+
+<!-- PRESTASI + JERSEY + GALERI + VIDEO (SINGLE BACKGROUND WRAPPER) -->
+<section class="relative w-full text-white" style="background-color:#000;
+background-image:
+linear-gradient(to bottom, rgba(255,120,0,0.95), rgba(0,0,0,0.95), rgba(0,100,0,0.95)),
+linear-gradient(to bottom, rgba(255,120,0,0.95), rgba(0,0,0,0.95), rgba(0,100,0,0.95)),
+radial-gradient(circle at center, rgba(0,0,0,0) 40%, rgba(0,0,0,0.85) 100%),
+url('background.jpeg');
+background-size: 25% 100%, 25% 100%, 100% 100%, 37% auto;
+background-position: left top, right top, center center, center top;
+background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
+background-attachment: scroll, scroll, scroll, fixed;">
+</div>
+
+
+
+<div class="relative z-10">
+
+<!-- PRESTASI -->
+<section class="py-20 max-w-6xl mx-auto px-6">
+<h2 class="text-3xl font-bold text-center mb-12">Prestasi Club</h2>
+<div class="grid md:grid-cols-3 gap-8">
+    <div class="bg-white/90 text-gray-800 p-6 rounded-2xl shadow-xl">
+        <h3 class="font-bold">Juara 1 Turnamen Antar Pelajar Bogor 2024</h3>
+    </div>
+    <div class="bg-white/90 text-gray-800 p-6 rounded-2xl shadow-xl">
+        <h3 class="font-bold">Juara 2 Kejurkot Bogor 2023</h3>
+    </div>
+    <div class="bg-white/90 text-gray-800 p-6 rounded-2xl shadow-xl">
+        <h3 class="font-bold">Best Player U-15 2024</h3>
+    </div>
+</div>
+</section>
+
+<!-- JERSEY -->
+<section class="py-20">
+<div class="max-w-6xl mx-auto px-6">
+<h2 class="text-3xl font-bold text-center mb-10">Official Jersey</h2>
+<div class="grid md:grid-cols-3 gap-6 text-center">
+    <div class="bg-white/90 text-gray-800 p-6 rounded-2xl shadow-xl">
+        <img src="jersey1.jpg" class="rounded-xl mb-4" alt="Jersey Home">
+        <p class="font-semibold">Jersey Home 2026</p>
+    </div>
+    <div class="bg-white/90 text-gray-800 p-6 rounded-2xl shadow-xl">
+        <img src="jersey2.jpg" class="rounded-xl mb-4" alt="Jersey Away">
+        <p class="font-semibold">Jersey Away 2026</p>
+    </div>
+    <div class="bg-white/90 text-gray-800 p-6 rounded-2xl shadow-xl">
+        <img src="jersey3.jpg" class="rounded-xl mb-4" alt="Jersey Training">
+        <p class="font-semibold">Jersey Training</p>
+    </div>
+</div>
+</div>
+</section>
+
+<!-- GALERI -->
+<section class="py-20 max-w-6xl mx-auto px-6">
+<h2 class="text-3xl font-bold text-center mb-10">Galeri Tim</h2>
+<div class="grid md:grid-cols-3 gap-6">
+    <img src="tim1.jpg" class="rounded-2xl shadow-xl" alt="Tim 1">
+    <img src="tim2.jpg" class="rounded-2xl shadow-xl" alt="Tim 2">
+    <img src="tim3.jpg" class="rounded-2xl shadow-xl" alt="Tim 3">
+</div>
+<p class="text-center text-sm mt-4">*Ganti file gambar dengan foto asli tim Anda</p>
+</section>
+
+<!-- VIDEO HIGHLIGHT -->
+<section class="py-20 text-center">
+<h2 class="text-3xl font-bold mb-8">Video Highlight</h2>
+<div class="max-w-4xl mx-auto">
+<iframe class="w-full h-64 md:h-96 rounded-2xl shadow-xl"
+    src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+    allowfullscreen>
+</iframe>
+<p class="text-sm mt-4">*Ganti link YouTube dengan highlight pertandingan Anda</p>
+</div>
+</section>
+
+</div>
+</section>
+
+<!-- ADMIN MINI BUTTON -->
+<button onclick="toggleAdmin()" class="fixed bottom-4 right-4 bg-blue-600 text-white px-4 py-2 rounded-full shadow-lg text-sm hover:scale-105 transition z-50">
+Admin
+</button>
+
+<!-- ADMIN POPUP -->
+<div id="adminPopup" class="hidden fixed inset-0 bg-black/60 flex items-center justify-center z-50">
+  <div class="bg-white p-6 rounded-2xl shadow-xl w-80">
+    <h3 class="text-lg font-bold mb-4 text-center text-blue-600">Admin Login</h3>
+    <input id="adminPass" type="password" placeholder="Password" class="w-full p-2 border rounded-lg mb-3 text-sm">
+    <button onclick="loginAdmin()" class="w-full bg-blue-600 text-white py-2 rounded-lg text-sm">Login</button>
+    <button onclick="toggleAdmin()" class="w-full mt-2 text-xs text-gray-500">Tutup</button>
+    <p id="adminStatus" class="text-center mt-3 text-sm"></p>
+  </div>
+</div>
+
+<!-- FORM PENDAFTARAN (GOOGLE FORM INTEGRATION) -->
+<section id="daftar" class="py-20 bg-gradient-to-r from-green-600 via-blue-500 to-orange-500 text-white">
+  <div class="max-w-4xl mx-auto px-6 text-center">
+    
+    <h2 class="text-3xl md:text-4xl font-extrabold mb-4">
+      Form Pendaftaran Online
+    </h2>
+    <p class="mb-8 text-white/90">
+      Daftarkan diri Anda sekarang dan bergabung bersama Kujang Bogor Volleyball Club
+    </p>
+
+    <div class="bg-white rounded-2xl shadow-2xl overflow-hidden">
+      <iframe 
+        src="https://docs.google.com/forms/d/e/1FAIpQLSdcWbP0uw4Dk7ACSgkFbN0InpxyMRkp5z5oKwpQIraCfcUGkw/viewform?embedded=true"
+        class="w-full"
+        height="900"
+        frameborder="0">
+        Memuat…
+      </iframe>
+    </div>
+
+  </div>
+</section>
+
+<footer class="bg-blue-600 text-white text-center py-6">
+© 2026 Kujang Bogor Volleyball Club | Kota Bogor
+</footer>
+
+<script>
+
+function loginAdmin(){
+    var pass = document.getElementById('adminPass').value;
+    if(pass === "kujang2026"){
+        document.getElementById('adminStatus').innerHTML = "Login Berhasil ✅";
+    } else {
+        document.getElementById('adminStatus').innerHTML = "Password Salah ❌";
+    }
+}
+
+function toggleAdmin(){
+    document.getElementById('adminPopup').classList.toggle('hidden');
+}
+</script>
+
+<!-- STATISTIK SECTION -->
+<section class="py-16 text-center bg-black text-white">
+<h2 class="text-3xl font-bold mb-12">Statistik Club</h2>
+<div class="grid grid-cols-1 md:grid-cols-3 gap-10 max-w-5xl mx-auto">
+    <div>
+        <h3 class="text-5xl font-extrabold counter" data-target="120">0</h3>
+        <p class="mt-2">Jumlah Atlet</p>
+    </div>
+    <div>
+        <h3 class="text-5xl font-extrabold counter" data-target="15">0</h3>
+        <p class="mt-2">Prestasi Diraih</p>
+    </div>
+    <div>
+        <h3 class="text-5xl font-extrabold counter" data-target="2018">0</h3>
+        <p class="mt-2">Tahun Berdiri</p>
+    </div>
+</div>
+</section>
+
+<style>
+.fade-section{opacity:0; transform:translateY(40px); transition:all 1s ease;}
+.fade-section.show{opacity:1; transform:translateY(0);}
+@media(max-width:768px){
+    h1{font-size:2rem !important;}
+    h2{font-size:1.5rem !important;}
+    section{padding-top:3rem !important; padding-bottom:3rem !important;}
+}
+</style>
+
+<script>
+// FADE IN ON SCROLL
+const faders = document.querySelectorAll('section');
+const observer = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+        if(entry.isIntersecting){
+            entry.target.classList.add('show');
+        }
+    });
+},{threshold:0.2});
+
+faders.forEach(sec=>{
+    sec.classList.add('fade-section');
+    observer.observe(sec);
+});
+
+// COUNTER ANIMATION
+const counters = document.querySelectorAll('.counter');
+const speed = 200;
+
+const counterObserver = new IntersectionObserver(entries=>{
+    entries.forEach(entry=>{
+        if(entry.isIntersecting){
+            const counter = entry.target;
+            const target = +counter.getAttribute('data-target');
+            const increment = target / speed;
+            let count = 0;
+            const update = ()=>{
+                count += increment;
+                if(count < target){
+                    counter.innerText = Math.floor(count);
+                    requestAnimationFrame(update);
+                } else {
+                    counter.innerText = target;
+                }
+            };
+            update();
+            counterObserver.unobserve(counter);
+        }
+    });
+},{threshold:0.5});
+
+counters.forEach(c=>counterObserver.observe(c));
+</script>
+
+</body>
+</html>
